<resources>
    <string name="app_name">WhiteRabbitt</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_show_geofence_transitions">ShowGeofenceTransitionsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_invitations">Invitations</string>
    <string name="title_activity_create_event">New Event</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_contact">Contact Details</string>
    <string name="title_activity_donation">Donate Carrots</string>
    <string name="title_activity_donation_success">Donation Received</string>
    <string name="title_activity_redeem_carrots">Redeem Carrots</string>
    <string name="title_activity_receive_gift_card">Gift Card Received</string>

    <!-- Action bar item strings -->
    <string name="action_invitations">Invitations</string>
    <string name="action_create_event">New Event</string>
    <string name="action_settings">Settings</string>
    <string name="action_event_send">Send</string>
    <string name="action_close">Close</string>
    <string name="action_send">Send</string>
    <string name="action_sync">Sync</string>
    <string name="action_donate">Donate</string>

    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="status">Status</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="pending">Pending</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="level">Level</string>
    <string name="level_placeholder">(Level)</string>
    <string name="carrots">Carrots</string>
    <string name="carrots_placeholder">(Carrots)</string>
    <string name="donations">Donations</string>
    <string name="donations_placeholder">(Donations)</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="punctuality_percentage">Punctuality (%)</string>
    <string name="redeem_info"> Send a gift card to your friends with your carrots!</string>
    <string name="donation_disclaimer"> WhiteRabbitt will donate the amount for you to one of the carefully selected charities from\n www.charitynavigator.com\n\nThe donation status is available at www.whiterabbitt.com/generosity  </string>
    <string name="donation_info"> When you donate carrots,\nWhiteRabbitt will donate for you in $ </string>

    <string name="btn_donate_carrots">Donate carrots</string>
    <string name="btn_redeem_carrots">Redeem carrots</string>

    <!-- Create account strings -->
    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_email">Email address</string>
    <string name="label_password">Password</string>
    <string name="label_passwordConfirm">Confirm Password</string>
    <string name="label_phone">Phone number</string>
    <string name="label_agreement">I agree to White Rabbit\'s terms</string>

    <string name="btn_create">Create account</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <string name="wager_amount">Pick wager amount</string>
    <string name="wager_default">$1</string>
    <string name="cancel">Cancel</string>

    <string-array name="wager_options">
        <item>$1</item>
        <item>$2</item>
        <item>$3</item>
        <item>$4</item>
        <item>$5</item>
    </string-array>

    <string name="dialog_title">Still pending. . .</string>
    <string name="title_activity_app_link">Share App Link</string>
    <string name="header_send_link">Share WhiteRabbitt with your friends! Copy the following link:</string>
    <string name="url_app">https://play.google.com/apps/testing/com.whiterabbitt.whiterabbitt</string>
</resources>
