<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_invitations"
        android:title="@string/action_invitations"
        android:icon="@drawable/ic_mail_white_48dp"
        app:showAsAction="always" />

    <item android:id="@+id/action_create_event"
        android:title="@string/action_create_event"
        android:icon="@drawable/ic_add_white_48dp"
        app:showAsAction="always" />

    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:icon="@drawable/ic_sync_white_48dp"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
